--- a/kubernetes/svc.yaml
+++ b/kubernetes/svc.yaml
@@ -1,21 +1,7 @@
 apiVersion: v1
 kind: Service
 metadata:
-  name: data-collectors-service-clusterip
-  namespace: data-collectors
-spec:
-  type: ClusterIP
-  selector:
-    app: data-collectors
-  ports:
-    - protocol: TCP
-      port: 8000
-      targetPort: 8000
----
-apiVersion: v1
-kind: Service
-metadata:
-  name: data-collectors-service-nodeport
+  name: data-collectors-service
   namespace: data-collectors
 spec:
   type: NodePort
