--- a/.github/workflows/build_deploy_prod.yaml
+++ b/.github/workflows/build_deploy_prod.yaml
@@ -59,7 +59,8 @@ jobs:
           
   redeploy:
     runs-on: self-hosted
-    needs: build
+    if: always()
+    needs: [remove-running-app]
     steps:
       - name: Checkout
         uses: actions/checkout@v2
@@ -68,7 +69,8 @@ jobs:
         run: >-
           echo DB_CONNECTION_STRING=${{ secrets.DB_CONNECTION_STRING }} >> .env &&
           echo APP_NAME=${{ env.APP_NAME }} >> .env &&
-          echo APP_VERSION=${{ env.TAG }} >> .env
+          echo APP_VERSION=${{ env.TAG }} >> .env && 
+          echo MLFLOW_TRACKING_URI=${{ secrets.MLFLOW_TRACKING_URI }}
 
       - name: Login to DockerHub
         uses: docker/login-action@v1
