--- a/requirements.txt
+++ b/requirements.txt
@@ -1,12 +1,7 @@
-pandas==2.2.0
-aiohttp==3.9.3
-asyncio==3.4.3
-beautifulsoup4==4.12.3
-requests==2.31.0
-soupsieve==2.5
-numpy==1.26.3
-SQLAlchemy==2.0.25
+lxml==5.3.0
 psycopg2-binary==2.9.9
-nest-asyncio==1.6.0
-uvicorn==0.20.0
-fastapi==0.96.1
+python-dotenv==1.0.1
+Scrapy==2.11.2
+SQLAlchemy==2.0.32
+pandas
+
